<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="RADII_LIMIT" Id="{c1816cb3-ac1b-4d82-848e-a830039fe351}">
    <Declaration><![CDATA[TYPE RADII_LIMIT :
STRUCT
    LOW_LIMIT  : REAL := 0;     //Lowest allowed radius
    HIGH_LIMIT : REAL := 10000; //Highest allowed radius
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>