<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="p_MPSSup" Id="{22fa257d-fc87-4b8c-8293-563a03fa02d7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_MPSSup
VAR
    BEAT: FB_HEARTBEAT;
    STATE_LATCH : RS;
    LIMIT_LATCH : RS;
    XRT_LENS_SYSTEM : FB_LENS_SYSTEM;
    TFS_LENS_SYSTEM : FB_LENS_SYSTEM;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Instantiate Latches
///////////////////////////////////

//Unknown position latches
STATE_LATCH(SET:=bSTATE_FAULT, RESET1:=i_xFAULT_CLEAR);
q_xPOSITION_LATCH := STATE_LATCH.Q1;

//Violated limit latch
LIMIT_LATCH(SET:=bLIMIT_VIOLATED, RESET1:=i_xFAULT_CLEAR);
q_xLIMIT_LATCH := LIMIT_LATCH.Q1;

//IOC Heartbeat
///////////////////////////////////////////////
BEAT(BEAT:=i_xIOC_HEARTBEAT,DEADTIME:=TIME#1.0S);
bHEARTBEATALIVE := BEAT.ALIVE;

//XRT LENS SYSTEM
///////////////////////////
XRT_LENS_SYSTEM(LENSES:=XRT_LENSES, COUNT:=3, RADII_LIMIT:=XRT_LIMIT);
XRT_RADIUS := XRT_LENS_SYSTEM.EFF_RADII;

//TFS LENS SYSTEM
///////////////////////////
TFS_LENS_SYSTEM(LENSES:=TFS_LENSES, COUNT:=10, RADII_LIMIT:=TFS_LIMIT);
TFS_RADIUS := TFS_LENS_SYSTEM.EFF_RADII;

//Summarize faults
///////////////////////////

//Limit Violations
bLIMIT_VIOLATED := XRT_LENS_SYSTEM.LIMIT_FAULT OR TFS_LENS_SYSTEM.LIMIT_FAULT;

//State Violations
bSTATE_FAULT := XRT_LENS_SYSTEM.UNKNOWN_FAULT OR TFS_LENS_SYSTEM.UNKNOWN_FAULT;

//Final Summary
bFAULT := bLIMIT_VIOLATED OR bSTATE_FAULT OR NOT bHEARTBEATALIVE;
bTRIP_MPS := NOT bFAULT;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>